solc_mutator_ossfuzz_seed_corpus/test_sol/test_8832bc0ec7af8f1d0d0130d15ff4ffd50a43e5953bebe296f0e121272dae6cf1_ef7fd53a524199658d1353f73c1eb89dc0888eb1_sol.sol
==== Source:  ====

==== Source: su0.sol ====
function f0(bytes memory i0,bool i1)  returns(bytes memory o0,function () external o1,bool o2,uint120 o3)
{
}
function f1(bool i0)  returns(bool o0)
{
  unchecked {
i0 = (5674798 >= ((((4426501 & ~(~(((((~(4278034) / (13107934 + (4576455 | (13004568 / 938981)))) / (15545954 ** 3110961)) << 12231260) << 6555334)))) << 15596793) * ((1765159 / 14556881) ** 13557467)) - 2665077));

  }
  {


  }
}
contract C0 {
}
// ----
// TypeError 2271: (su0.sol:234-263): Operator | not compatible with types int_const 4576455 and rational_const 13004568 / 938981
// TypeError 2271: (su0.sol:270-289): Operator ** not compatible with types int_const 15545954 and int_const 3110961
// TypeError 2271: (su0.sol:206-303): Operator << not compatible with types rational_const -4278035 / 274920697912106 and int_const 12231260
// TypeError 2271: (su0.sol:205-315): Operator << not compatible with types rational_const -4278035 / 274920697912106 and int_const 6555334
// TypeError 4907: (su0.sol:202-317): Unary operator ~ cannot be applied to type rational_const -4278035 / 274920697912106
// TypeError 4907: (su0.sol:200-318): Unary operator ~ cannot be applied to type rational_const -4278035 / 274920697912106
// TypeError 2271: (su0.sol:190-318): Operator & not compatible with types int_const 4426501 and rational_const -4278035 / 274920697912106
// TypeError 2271: (su0.sol:189-331): Operator << not compatible with types int_const 4426501 and int_const 15596793
// TypeError 2271: (su0.sol:336-368): Operator ** not compatible with types rational_const 1765159 / 14556881 and int_const 13557467
// TypeError 2271: (su0.sol:175-381): Operator >= not compatible with types int_const 5674798 and rational_const -30981730666178 / 14556881
